kubernetes/backend-findcar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-findcar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-findcar
  template:
    metadata:
      labels:
        app: backend-findcar
    spec:
      containers:
        - name: backend-findcar
          image: linspecteur/backend-findcar:v1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-findcar
spec:
  selector:
    app: backend-findcar
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
