kubernetes/backend-pollution-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-pollution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-pollution
  template:
    metadata:
      labels:
        app: backend-pollution
    spec:
      containers:
        - name: backend-pollution
          image: linspecteur/backend-pollution:v2
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-pollution
spec:
  selector:
    app: backend-pollution
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
